fix: upgrade log4j